--- a/comp_bundle-es5.html
+++ b/comp_bundle-es5.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
+</head>
 <body>
-<script src="./bundle-es5.min.js"></script>
+<script src="./bundle-es5.js"></script>
 </script>
+</body>
+</html>
