--- a/comp_bundle-es5.html
+++ b/comp_bundle-es5.html
@@ -2,5 +2,7 @@
 </head>
 <body>
 <script src="./bundle-es5.js"></script>
+<script src="custom-elements-es5-adapter.js"></script>
+<!--! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
 </body>
 </html>
