--- a/comp_bundle.html
+++ b/comp_bundle.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width">
+</head>
 <body>
 <script src="./bundle.min.js"></script>
-</script>
+</body>
+</html>
